--- a/.config
+++ b/.config
@@ -1,1 +1,255 @@
-
+CONFIG_TARGET_ramips=y
+CONFIG_TARGET_ramips_mt7621=y
+CONFIG_TARGET_ramips_mt7621_DEVICE_lenovo_newifi-d1=y
+CONFIG_ARIA2_BITTORRENT=y
+CONFIG_ARIA2_NOXML=y
+CONFIG_ARIA2_OPENSSL=y
+CONFIG_ARIA2_WEBSOCKET=y
+CONFIG_KSMBD_SMB_INSECURE_SERVER=y
+CONFIG_LIBCURL_COOKIES=y
+CONFIG_LIBCURL_FILE=y
+CONFIG_LIBCURL_FTP=y
+CONFIG_LIBCURL_HTTP=y
+CONFIG_LIBCURL_OPENSSL=y
+CONFIG_LIBCURL_PROXY=y
+CONFIG_LIBSODIUM_MINIMAL=y
+CONFIG_LIGHTTPD_SSL=y
+CONFIG_MTK_APCLI_SUPPORT=y
+CONFIG_MTK_ATE_SUPPORT=y
+CONFIG_MTK_BACKGROUND_SCAN_SUPPORT=y
+CONFIG_MTK_BAND_STEERING=y
+CONFIG_MTK_BRCM_256QAM_SUPPORT=y
+CONFIG_MTK_CHIP_MT7615E=y
+CONFIG_MTK_DBDC_MODE=y
+CONFIG_MTK_DOT11W_PMF_SUPPORT=y
+CONFIG_MTK_DOT11_N_SUPPORT=y
+CONFIG_MTK_DOT11_VHT_AC=y
+CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
+CONFIG_MTK_FIRST_IF_EPAELNA=y
+CONFIG_MTK_FIRST_IF_MT7615E=y
+CONFIG_MTK_GREENAP_SUPPORT=y
+CONFIG_MTK_G_BAND_256QAM_SUPPORT=y
+CONFIG_MTK_HDR_TRANS_RX_SUPPORT=y
+CONFIG_MTK_HDR_TRANS_TX_SUPPORT=y
+CONFIG_MTK_ICAP_SUPPORT=y
+CONFIG_MTK_IGMP_SNOOP_SUPPORT=y
+CONFIG_MTK_MAC_REPEATER_SUPPORT=y
+CONFIG_MTK_MBSS_SUPPORT=y
+CONFIG_MTK_MCAST_RATE_SPECIFIC=y
+CONFIG_MTK_MT_AP_SUPPORT=y
+CONFIG_MTK_MT_DFS_SUPPORT=y
+CONFIG_MTK_MT_MAC=y
+CONFIG_MTK_MT_WIFI=y
+CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
+CONFIG_MTK_MULTI_PROFILE_SUPPORT=y
+CONFIG_MTK_MUMIMO_SUPPORT=y
+CONFIG_MTK_MU_RA_SUPPORT=y
+CONFIG_MTK_PCIE_ASPM_DYM_CTRL_SUPPORT=y
+CONFIG_MTK_PRE_CAL_TRX_SET1_SUPPORT=y
+CONFIG_MTK_PRE_CAL_TRX_SET2_SUPPORT=y
+CONFIG_MTK_RED_SUPPORT=y
+CONFIG_MTK_RLM_CAL_CACHE_SUPPORT=y
+CONFIG_MTK_RTMP_FLASH_SUPPORT=y
+CONFIG_MTK_RT_FIRST_CARD=7615
+CONFIG_MTK_RT_FIRST_CARD_EEPROM="flash"
+CONFIG_MTK_RT_FIRST_IF_RF_OFFSET=0xc0000
+CONFIG_MTK_SECOND_IF_NONE=y
+CONFIG_MTK_SMART_CARRIER_SENSE_SUPPORT=y
+CONFIG_MTK_SPECTRUM_SUPPORT=y
+CONFIG_MTK_SUPPORT_OPENWRT=y
+CONFIG_MTK_TCP_RACK_SUPPORT=y
+CONFIG_MTK_THIRD_IF_NONE=y
+CONFIG_MTK_TPC_SUPPORT=y
+CONFIG_MTK_TXBF_SUPPORT=y
+CONFIG_MTK_UAPSD=y
+CONFIG_MTK_VHT_TXBF_2G_EPIGRAM_IE_SUPPORT=y
+CONFIG_MTK_VOW_SUPPORT=y
+CONFIG_MTK_WDS_SUPPORT=y
+CONFIG_MTK_WIFI_BASIC_FUNC=y
+CONFIG_MTK_WIFI_DRIVER=y
+CONFIG_MTK_WIFI_MODE_AP=y
+CONFIG_MTK_WIFI_MT_MAC=y
+CONFIG_MTK_WSC_INCLUDED=y
+CONFIG_MTK_WSC_V2_SUPPORT=y
+CONFIG_NGINX_HEADERS_MORE=y
+CONFIG_NGINX_HTTP_ACCESS=y
+CONFIG_NGINX_HTTP_AUTH_BASIC=y
+CONFIG_NGINX_HTTP_AUTOINDEX=y
+CONFIG_NGINX_HTTP_BROWSER=y
+CONFIG_NGINX_HTTP_CACHE=y
+CONFIG_NGINX_HTTP_CHARSET=y
+CONFIG_NGINX_HTTP_EMPTY_GIF=y
+CONFIG_NGINX_HTTP_FASTCGI=y
+CONFIG_NGINX_HTTP_GEO=y
+CONFIG_NGINX_HTTP_GZIP=y
+CONFIG_NGINX_HTTP_LIMIT_CONN=y
+CONFIG_NGINX_HTTP_LIMIT_REQ=y
+CONFIG_NGINX_HTTP_MAP=y
+CONFIG_NGINX_HTTP_MEMCACHED=y
+CONFIG_NGINX_HTTP_PROXY=y
+CONFIG_NGINX_HTTP_REFERER=y
+CONFIG_NGINX_HTTP_REWRITE=y
+CONFIG_NGINX_HTTP_SCGI=y
+CONFIG_NGINX_HTTP_SPLIT_CLIENTS=y
+CONFIG_NGINX_HTTP_SSI=y
+CONFIG_NGINX_HTTP_UPSTREAM_HASH=y
+CONFIG_NGINX_HTTP_UPSTREAM_IP_HASH=y
+CONFIG_NGINX_HTTP_UPSTREAM_KEEPALIVE=y
+CONFIG_NGINX_HTTP_UPSTREAM_LEAST_CONN=y
+CONFIG_NGINX_HTTP_USERID=y
+CONFIG_NGINX_HTTP_UWSGI=y
+CONFIG_NGINX_NAXSI=y
+CONFIG_NGINX_PCRE=y
+CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
+CONFIG_PACKAGE_aria2=m
+CONFIG_PACKAGE_automount=y
+CONFIG_PACKAGE_autosamba=y
+CONFIG_PACKAGE_autossh=m
+CONFIG_PACKAGE_avahi-dbus-daemon=m
+CONFIG_PACKAGE_bash=m
+CONFIG_PACKAGE_ca-bundle=m
+CONFIG_PACKAGE_curl=m
+CONFIG_PACKAGE_dbus=m
+CONFIG_PACKAGE_fdisk=m
+CONFIG_PACKAGE_gzip=m
+CONFIG_PACKAGE_hdparm=m
+CONFIG_PACKAGE_ip6tables=y
+CONFIG_PACKAGE_iptables-mod-tproxy=m
+CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_jansson=m
+CONFIG_PACKAGE_k3wifi=m
+CONFIG_PACKAGE_kmod-crypto-ccm=m
+CONFIG_PACKAGE_kmod-crypto-cmac=m
+CONFIG_PACKAGE_kmod-crypto-crc32c=y
+CONFIG_PACKAGE_kmod-crypto-ctr=m
+CONFIG_PACKAGE_kmod-crypto-des=m
+CONFIG_PACKAGE_kmod-crypto-gcm=m
+CONFIG_PACKAGE_kmod-crypto-gf128=m
+CONFIG_PACKAGE_kmod-crypto-ghash=m
+CONFIG_PACKAGE_kmod-crypto-hmac=m
+CONFIG_PACKAGE_kmod-crypto-iv=m
+CONFIG_PACKAGE_kmod-crypto-md4=m
+CONFIG_PACKAGE_kmod-crypto-md5=m
+CONFIG_PACKAGE_kmod-crypto-rng=m
+CONFIG_PACKAGE_kmod-crypto-seqiv=m
+CONFIG_PACKAGE_kmod-crypto-sha256=m
+CONFIG_PACKAGE_kmod-crypto-sha512=m
+CONFIG_PACKAGE_kmod-crypto-wq=m
+CONFIG_PACKAGE_kmod-fs-exfat=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-ksmbd=m
+CONFIG_PACKAGE_kmod-fs-msdos=y
+CONFIG_PACKAGE_kmod-fs-ntfs=y
+CONFIG_PACKAGE_kmod-fs-vfat=y
+CONFIG_PACKAGE_kmod-fuse=y
+CONFIG_PACKAGE_kmod-ip6tables=y
+CONFIG_PACKAGE_kmod-ipt-nat6=y
+CONFIG_PACKAGE_kmod-ipt-tproxy=m
+CONFIG_PACKAGE_kmod-iptunnel=y
+CONFIG_PACKAGE_kmod-iptunnel4=y
+CONFIG_PACKAGE_kmod-lib-crc16=y
+CONFIG_PACKAGE_kmod-mt76=y
+CONFIG_PACKAGE_kmod-mt76-usb=y
+CONFIG_PACKAGE_kmod-mt7615e=y
+CONFIG_PACKAGE_kmod-mt76x0-common=y
+CONFIG_PACKAGE_kmod-mt76x02-usb=y
+CONFIG_PACKAGE_kmod-mt76x0e=y
+CONFIG_PACKAGE_kmod-mt76x0u=y
+CONFIG_PACKAGE_kmod-mt76x2u=y
+CONFIG_PACKAGE_kmod-mt_wifi=y
+CONFIG_PACKAGE_kmod-nf-ipt6=y
+CONFIG_PACKAGE_kmod-nf-nat6=y
+CONFIG_PACKAGE_kmod-nf-reject6=y
+CONFIG_PACKAGE_kmod-nls-cp437=y
+CONFIG_PACKAGE_kmod-nls-cp932=y
+CONFIG_PACKAGE_kmod-nls-cp936=y
+CONFIG_PACKAGE_kmod-nls-cp950=y
+CONFIG_PACKAGE_kmod-nls-iso8859-1=y
+CONFIG_PACKAGE_kmod-nls-utf8=y
+CONFIG_PACKAGE_kmod-scsi-core=y
+CONFIG_PACKAGE_kmod-sit=y
+CONFIG_PACKAGE_kmod-usb-ehci=y
+CONFIG_PACKAGE_kmod-usb-storage=y
+CONFIG_PACKAGE_kmod-usb-storage-extras=y
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_libavahi-dbus-support=m
+CONFIG_PACKAGE_libblkid=m
+CONFIG_PACKAGE_libcap=y
+CONFIG_PACKAGE_libcares=m
+CONFIG_PACKAGE_libcurl=m
+CONFIG_PACKAGE_libdaemon=m
+CONFIG_PACKAGE_libdbus=m
+CONFIG_PACKAGE_libev=m
+CONFIG_PACKAGE_libevent2-core=y
+CONFIG_PACKAGE_libevent2-pthreads=y
+CONFIG_PACKAGE_libexpat=m
+CONFIG_PACKAGE_libfdisk=m
+CONFIG_PACKAGE_libmbedtls=m
+CONFIG_PACKAGE_libncurses=m
+CONFIG_PACKAGE_libpam=m
+CONFIG_PACKAGE_libreadline=m
+CONFIG_PACKAGE_libsmartcols=m
+CONFIG_PACKAGE_libsodium=m
+CONFIG_PACKAGE_libstdcpp=m
+CONFIG_PACKAGE_lighttpd=m
+CONFIG_PACKAGE_luci-app-samba=y
+CONFIG_PACKAGE_luci-i18n-samba-zh-cn=y
+CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_nginx=m
+CONFIG_PACKAGE_nginx-all-module=m
+CONFIG_PACKAGE_nginx-mod-luci=m
+CONFIG_PACKAGE_nginx-mod-luci-ssl=m
+CONFIG_PACKAGE_nginx-ssl=m
+CONFIG_PACKAGE_ntfs-3g=y
+CONFIG_PACKAGE_ntp-utils=y
+CONFIG_PACKAGE_ntpclient=y
+CONFIG_PACKAGE_ntpd=y
+CONFIG_PACKAGE_ntpdate=y
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
+CONFIG_PACKAGE_openssh-client=m
+CONFIG_PACKAGE_openssh-client-utils=m
+CONFIG_PACKAGE_openssh-keygen=m
+CONFIG_PACKAGE_openssh-moduli=m
+CONFIG_PACKAGE_openssh-server=m
+CONFIG_PACKAGE_openssh-server-pam=m
+CONFIG_PACKAGE_openssh-sftp-avahi-service=m
+CONFIG_PACKAGE_openssh-sftp-client=m
+CONFIG_PACKAGE_openssh-sftp-server=m
+CONFIG_PACKAGE_privoxy=m
+CONFIG_PACKAGE_resolveip=m
+CONFIG_PACKAGE_samba36-server=y
+CONFIG_PACKAGE_screen=m
+CONFIG_PACKAGE_shadowsocks-client=m
+CONFIG_PACKAGE_shadowsocks-libev-ss-local=m
+CONFIG_PACKAGE_shadowsocks-libev-ss-redir=m
+CONFIG_PACKAGE_shadowsocks-libev-ss-rules=m
+CONFIG_PACKAGE_shadowsocks-libev-ss-server=m
+CONFIG_PACKAGE_shadowsocks-libev-ss-tunnel=m
+CONFIG_PACKAGE_shadowsocksr-libev=m
+CONFIG_PACKAGE_shadowsocksr-libev-alt=m
+CONFIG_PACKAGE_shadowsocksr-libev-server=m
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=m
+CONFIG_PACKAGE_sshtunnel=m
+CONFIG_PACKAGE_sudo=m
+CONFIG_PACKAGE_terminfo=m
+CONFIG_PACKAGE_uclibcxx=m
+CONFIG_PACKAGE_unrar=m
+CONFIG_PACKAGE_unzip=m
+CONFIG_PACKAGE_uwsgi-cgi=m
+CONFIG_PACKAGE_uwsgi-cgi-luci-support=m
+CONFIG_PACKAGE_v2ray=m
+CONFIG_PACKAGE_vim=m
+CONFIG_PACKAGE_wifi-l1profile=y
+CONFIG_PACKAGE_wireguard-tools=y
+CONFIG_PACKAGE_wsdd2=y
+CONFIG_PACKAGE_zip=m
+CONFIG_V2RAY_COMPRESS_UPX=y
+CONFIG_V2RAY_DISABLE_NONE=y
+CONFIG_V2RAY_EXCLUDE_ASSETS=y
+CONFIG_V2RAY_EXCLUDE_V2CTL=y
+CONFIG_V2RAY_JSON_INTERNAL=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
