--- a/.config
+++ b/.config
@@ -5,11 +5,18 @@ CONFIG_ARIA2_BITTORRENT=y
 CONFIG_ARIA2_NOXML=y
 CONFIG_ARIA2_OPENSSL=y
 CONFIG_ARIA2_WEBSOCKET=y
+CONFIG_GNUTLS_ALPN=y
+CONFIG_GNUTLS_ANON=y
+CONFIG_GNUTLS_DTLS_SRTP=y
+CONFIG_GNUTLS_HEARTBEAT=y
+CONFIG_GNUTLS_OCSP=y
+CONFIG_GNUTLS_PSK=y
 CONFIG_KSMBD_SMB_INSECURE_SERVER=y
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
 CONFIG_LIBCURL_FTP=y
 CONFIG_LIBCURL_HTTP=y
+CONFIG_LIBCURL_NO_SMB="!"
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_LIBCURL_PROXY=y
 CONFIG_LIBSODIUM_MINIMAL=y
@@ -100,27 +107,49 @@ CONFIG_NGINX_HTTP_USERID=y
 CONFIG_NGINX_HTTP_UWSGI=y
 CONFIG_NGINX_NAXSI=y
 CONFIG_NGINX_PCRE=y
+CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
+CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
+CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
+CONFIG_OPENVPN_openssl_ENABLE_LZO=y
+CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
+CONFIG_OPENVPN_openssl_ENABLE_PF=y
+CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
+CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
+CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
 CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
+CONFIG_PACKAGE_adbyby=m
+CONFIG_PACKAGE_amule=m
 CONFIG_PACKAGE_aria2=m
+CONFIG_PACKAGE_ariang=m
+CONFIG_PACKAGE_attr=m
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_autosamba=y
 CONFIG_PACKAGE_autossh=m
 CONFIG_PACKAGE_avahi-dbus-daemon=m
 CONFIG_PACKAGE_bash=m
+CONFIG_PACKAGE_boost=m
+CONFIG_PACKAGE_boost-chrono=m
+CONFIG_PACKAGE_boost-random=m
+CONFIG_PACKAGE_boost-system=m
 CONFIG_PACKAGE_ca-bundle=m
 CONFIG_PACKAGE_curl=m
 CONFIG_PACKAGE_dbus=m
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_fdisk=m
 CONFIG_PACKAGE_gzip=m
 CONFIG_PACKAGE_hdparm=m
+CONFIG_PACKAGE_icu=m
 CONFIG_PACKAGE_ip6tables=y
+CONFIG_PACKAGE_iptables-mod-conntrack-extra=m
+CONFIG_PACKAGE_iptables-mod-ipopt=m
 CONFIG_PACKAGE_iptables-mod-tproxy=m
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_jansson=m
 CONFIG_PACKAGE_k3wifi=m
 CONFIG_PACKAGE_kmod-crypto-ccm=m
 CONFIG_PACKAGE_kmod-crypto-cmac=m
+CONFIG_PACKAGE_kmod-crypto-crc32=m
 CONFIG_PACKAGE_kmod-crypto-crc32c=y
 CONFIG_PACKAGE_kmod-crypto-ctr=m
 CONFIG_PACKAGE_kmod-crypto-des=m
@@ -138,12 +167,16 @@ CONFIG_PACKAGE_kmod-crypto-sha512=m
 CONFIG_PACKAGE_kmod-crypto-wq=m
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-f2fs=m
 CONFIG_PACKAGE_kmod-fs-ksmbd=m
 CONFIG_PACKAGE_kmod-fs-msdos=y
 CONFIG_PACKAGE_kmod-fs-ntfs=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-fuse=y
+CONFIG_PACKAGE_kmod-ifb=m
 CONFIG_PACKAGE_kmod-ip6tables=y
+CONFIG_PACKAGE_kmod-ipt-conntrack-extra=m
+CONFIG_PACKAGE_kmod-ipt-ipopt=m
 CONFIG_PACKAGE_kmod-ipt-nat6=y
 CONFIG_PACKAGE_kmod-ipt-tproxy=m
 CONFIG_PACKAGE_kmod-iptunnel=y
@@ -151,6 +184,7 @@ CONFIG_PACKAGE_kmod-iptunnel4=y
 CONFIG_PACKAGE_kmod-lib-crc16=y
 CONFIG_PACKAGE_kmod-mt76=y
 CONFIG_PACKAGE_kmod-mt76-usb=y
+CONFIG_PACKAGE_kmod-mt7601u=m
 CONFIG_PACKAGE_kmod-mt7615e=y
 CONFIG_PACKAGE_kmod-mt76x0-common=y
 CONFIG_PACKAGE_kmod-mt76x02-usb=y
@@ -162,40 +196,103 @@ CONFIG_PACKAGE_kmod-nf-ipt6=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-nf-reject6=y
 CONFIG_PACKAGE_kmod-nls-cp437=y
-CONFIG_PACKAGE_kmod-nls-cp932=y
-CONFIG_PACKAGE_kmod-nls-cp936=y
-CONFIG_PACKAGE_kmod-nls-cp950=y
+CONFIG_PACKAGE_kmod-nls-cp932=m
+CONFIG_PACKAGE_kmod-nls-cp936=m
+CONFIG_PACKAGE_kmod-nls-cp950=m
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
 CONFIG_PACKAGE_kmod-nls-utf8=y
+CONFIG_PACKAGE_kmod-sched-connmark=m
+CONFIG_PACKAGE_kmod-sched-core=m
 CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-sit=y
+CONFIG_PACKAGE_kmod-tun=m
 CONFIG_PACKAGE_kmod-usb-ehci=y
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_libatomic=m
+CONFIG_PACKAGE_libattr=m
+CONFIG_PACKAGE_libavahi-client=m
 CONFIG_PACKAGE_libavahi-dbus-support=m
+CONFIG_PACKAGE_libbfd=m
 CONFIG_PACKAGE_libblkid=m
+CONFIG_PACKAGE_libbz2=m
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcares=m
+CONFIG_PACKAGE_libcryptopp=m
 CONFIG_PACKAGE_libcurl=m
 CONFIG_PACKAGE_libdaemon=m
+CONFIG_PACKAGE_libdb47=m
 CONFIG_PACKAGE_libdbus=m
+CONFIG_PACKAGE_libdouble-conversion=m
 CONFIG_PACKAGE_libev=m
+CONFIG_PACKAGE_libevent2=m
 CONFIG_PACKAGE_libevent2-core=y
 CONFIG_PACKAGE_libevent2-pthreads=y
 CONFIG_PACKAGE_libexpat=m
 CONFIG_PACKAGE_libfdisk=m
+CONFIG_PACKAGE_libffi=m
+CONFIG_PACKAGE_libgdbm=m
+CONFIG_PACKAGE_libgmp=m
+CONFIG_PACKAGE_libgnutls=m
+CONFIG_PACKAGE_liblzma=m
+CONFIG_PACKAGE_liblzo=m
 CONFIG_PACKAGE_libmbedtls=m
+CONFIG_PACKAGE_libminiupnpc=m
+CONFIG_PACKAGE_libnatpmp=m
 CONFIG_PACKAGE_libncurses=m
+CONFIG_PACKAGE_libnettle=m
 CONFIG_PACKAGE_libpam=m
+CONFIG_PACKAGE_libpcre2-16=m
+CONFIG_PACKAGE_libpng=m
+CONFIG_PACKAGE_libpopt=m
 CONFIG_PACKAGE_libreadline=m
 CONFIG_PACKAGE_libsmartcols=m
 CONFIG_PACKAGE_libsodium=m
+CONFIG_PACKAGE_libsqlite3=m
 CONFIG_PACKAGE_libstdcpp=m
+CONFIG_PACKAGE_libtasn1=m
+CONFIG_PACKAGE_libtirpc=m
+CONFIG_PACKAGE_libunbound=m
+CONFIG_PACKAGE_libupnp=m
+CONFIG_PACKAGE_libwxbase=m
+CONFIG_PACKAGE_libxml2=m
+CONFIG_PACKAGE_libzstd=m
 CONFIG_PACKAGE_lighttpd=m
+CONFIG_PACKAGE_luci-app-adbyby-plus=m
+CONFIG_PACKAGE_luci-app-amule=m
+CONFIG_PACKAGE_luci-app-aria2=m
+# CONFIG_PACKAGE_luci-app-ddns is not set
+CONFIG_PACKAGE_luci-app-openvpn=m
+CONFIG_PACKAGE_luci-app-openvpn-server=m
+CONFIG_PACKAGE_luci-app-p910nd=m
+CONFIG_PACKAGE_luci-app-qbittorrent=m
+CONFIG_PACKAGE_luci-app-qos=m
 CONFIG_PACKAGE_luci-app-samba=y
+CONFIG_PACKAGE_luci-app-samba4=y
+CONFIG_PACKAGE_luci-app-transmission=m
+CONFIG_PACKAGE_luci-app-uhttpd=m
+CONFIG_PACKAGE_luci-app-unbound=m
+CONFIG_PACKAGE_luci-app-v2ray-server=m
+CONFIG_PACKAGE_luci-app-webadmin=y
+CONFIG_PACKAGE_luci-app-zerotier=m
+CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-amule-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-openvpn-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-p910nd-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-qos-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-samba-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-transmission-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-v2ray-server-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=m
 CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_mt7601u-firmware=m
 CONFIG_PACKAGE_nginx=m
 CONFIG_PACKAGE_nginx-all-module=m
 CONFIG_PACKAGE_nginx-mod-luci=m
@@ -219,9 +316,43 @@ CONFIG_PACKAGE_openssh-server-pam=m
 CONFIG_PACKAGE_openssh-sftp-avahi-service=m
 CONFIG_PACKAGE_openssh-sftp-client=m
 CONFIG_PACKAGE_openssh-sftp-server=m
+CONFIG_PACKAGE_openvpn-easy-rsa=m
+CONFIG_PACKAGE_openvpn-openssl=m
+CONFIG_PACKAGE_p910nd=m
 CONFIG_PACKAGE_privoxy=m
+CONFIG_PACKAGE_python3=m
+CONFIG_PACKAGE_python3-asyncio=m
+CONFIG_PACKAGE_python3-base=m
+CONFIG_PACKAGE_python3-cgi=m
+CONFIG_PACKAGE_python3-cgitb=m
+CONFIG_PACKAGE_python3-codecs=m
+CONFIG_PACKAGE_python3-ctypes=m
+CONFIG_PACKAGE_python3-dbm=m
+CONFIG_PACKAGE_python3-decimal=m
+CONFIG_PACKAGE_python3-distutils=m
+CONFIG_PACKAGE_python3-email=m
+CONFIG_PACKAGE_python3-gdbm=m
+CONFIG_PACKAGE_python3-light=m
+CONFIG_PACKAGE_python3-logging=m
+CONFIG_PACKAGE_python3-lzma=m
+CONFIG_PACKAGE_python3-multiprocessing=m
+CONFIG_PACKAGE_python3-ncurses=m
+CONFIG_PACKAGE_python3-openssl=m
+CONFIG_PACKAGE_python3-pydoc=m
+CONFIG_PACKAGE_python3-sqlite3=m
+CONFIG_PACKAGE_python3-unittest=m
+CONFIG_PACKAGE_python3-urllib=m
+CONFIG_PACKAGE_python3-xml=m
+CONFIG_PACKAGE_qBittorrent=m
+CONFIG_PACKAGE_qos-scripts=m
+CONFIG_PACKAGE_qt5-core=m
+CONFIG_PACKAGE_qt5-network=m
+CONFIG_PACKAGE_qt5-xml=m
+CONFIG_PACKAGE_rblibtorrent=m
 CONFIG_PACKAGE_resolveip=m
 CONFIG_PACKAGE_samba36-server=y
+CONFIG_PACKAGE_samba4-libs=y
+CONFIG_PACKAGE_samba4-server=y
 CONFIG_PACKAGE_screen=m
 CONFIG_PACKAGE_shadowsocks-client=m
 CONFIG_PACKAGE_shadowsocks-libev-ss-local=m
@@ -235,8 +366,12 @@ CONFIG_PACKAGE_shadowsocksr-libev-server=m
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=m
 CONFIG_PACKAGE_sshtunnel=m
 CONFIG_PACKAGE_sudo=m
+CONFIG_PACKAGE_tc=m
 CONFIG_PACKAGE_terminfo=m
+CONFIG_PACKAGE_transmission-daemon-openssl=m
+CONFIG_PACKAGE_transmission-web-control=m
 CONFIG_PACKAGE_uclibcxx=m
+CONFIG_PACKAGE_unbound-daemon=m
 CONFIG_PACKAGE_unrar=m
 CONFIG_PACKAGE_unzip=m
 CONFIG_PACKAGE_uwsgi-cgi=m
@@ -244,12 +379,17 @@ CONFIG_PACKAGE_uwsgi-cgi-luci-support=m
 CONFIG_PACKAGE_v2ray=m
 CONFIG_PACKAGE_vim=m
 CONFIG_PACKAGE_wifi-l1profile=y
-CONFIG_PACKAGE_wireguard-tools=y
+CONFIG_PACKAGE_wireguard-tools=m
 CONFIG_PACKAGE_wsdd2=y
+CONFIG_PACKAGE_zerotier=m
 CONFIG_PACKAGE_zip=m
+CONFIG_SAMBA4_SERVER_AVAHI=y
+CONFIG_SAMBA4_SERVER_NETBIOS=y
+CONFIG_SAMBA4_SERVER_VFS=y
+CONFIG_SQLITE_FTS3=y
+CONFIG_SQLITE_RTREE=y
 CONFIG_V2RAY_COMPRESS_UPX=y
 CONFIG_V2RAY_DISABLE_NONE=y
 CONFIG_V2RAY_EXCLUDE_ASSETS=y
 CONFIG_V2RAY_EXCLUDE_V2CTL=y
 CONFIG_V2RAY_JSON_INTERNAL=y
-CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
