--- a/.config
+++ b/.config
@@ -5,6 +5,7 @@ CONFIG_ARIA2_BITTORRENT=y
 CONFIG_ARIA2_NOXML=y
 CONFIG_ARIA2_OPENSSL=y
 CONFIG_ARIA2_WEBSOCKET=y
+CONFIG_BIND_ENABLE_FILTER_AAAA=y
 CONFIG_GNUTLS_ALPN=y
 CONFIG_GNUTLS_ANON=y
 CONFIG_GNUTLS_DTLS_SRTP=y
@@ -122,23 +123,35 @@ CONFIG_PACKAGE_adbyby=m
 CONFIG_PACKAGE_amule=m
 CONFIG_PACKAGE_aria2=m
 CONFIG_PACKAGE_ariang=m
-CONFIG_PACKAGE_attr=m
+CONFIG_PACKAGE_attr=y
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_autosamba=y
 CONFIG_PACKAGE_autossh=m
-CONFIG_PACKAGE_avahi-dbus-daemon=m
+CONFIG_PACKAGE_avahi-dbus-daemon=y
 CONFIG_PACKAGE_bash=m
+CONFIG_PACKAGE_bind-check=m
+CONFIG_PACKAGE_bind-client=m
+CONFIG_PACKAGE_bind-dig=m
+CONFIG_PACKAGE_bind-dnssec=m
+CONFIG_PACKAGE_bind-host=m
+CONFIG_PACKAGE_bind-libs=m
+CONFIG_PACKAGE_bind-rndc=m
+CONFIG_PACKAGE_bind-server=m
+CONFIG_PACKAGE_bind-tools=m
 CONFIG_PACKAGE_boost=m
 CONFIG_PACKAGE_boost-chrono=m
 CONFIG_PACKAGE_boost-random=m
 CONFIG_PACKAGE_boost-system=m
 CONFIG_PACKAGE_ca-bundle=m
 CONFIG_PACKAGE_curl=m
-CONFIG_PACKAGE_dbus=m
+CONFIG_PACKAGE_dbus=y
+CONFIG_PACKAGE_dnscrypt-proxy=m
+CONFIG_PACKAGE_dnscrypt-proxy-resolvers=m
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_fdisk=m
 CONFIG_PACKAGE_gzip=m
 CONFIG_PACKAGE_hdparm=m
+CONFIG_PACKAGE_https_dns_proxy=m
 CONFIG_PACKAGE_icu=m
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=m
@@ -211,9 +224,9 @@ CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_libatomic=m
-CONFIG_PACKAGE_libattr=m
-CONFIG_PACKAGE_libavahi-client=m
-CONFIG_PACKAGE_libavahi-dbus-support=m
+CONFIG_PACKAGE_libattr=y
+CONFIG_PACKAGE_libavahi-client=y
+CONFIG_PACKAGE_libavahi-dbus-support=y
 CONFIG_PACKAGE_libbfd=m
 CONFIG_PACKAGE_libblkid=m
 CONFIG_PACKAGE_libbz2=m
@@ -221,38 +234,38 @@ CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcares=m
 CONFIG_PACKAGE_libcryptopp=m
 CONFIG_PACKAGE_libcurl=m
-CONFIG_PACKAGE_libdaemon=m
+CONFIG_PACKAGE_libdaemon=y
 CONFIG_PACKAGE_libdb47=m
-CONFIG_PACKAGE_libdbus=m
+CONFIG_PACKAGE_libdbus=y
 CONFIG_PACKAGE_libdouble-conversion=m
 CONFIG_PACKAGE_libev=m
 CONFIG_PACKAGE_libevent2=m
 CONFIG_PACKAGE_libevent2-core=y
 CONFIG_PACKAGE_libevent2-pthreads=y
-CONFIG_PACKAGE_libexpat=m
+CONFIG_PACKAGE_libexpat=y
 CONFIG_PACKAGE_libfdisk=m
 CONFIG_PACKAGE_libffi=m
 CONFIG_PACKAGE_libgdbm=m
-CONFIG_PACKAGE_libgmp=m
-CONFIG_PACKAGE_libgnutls=m
+CONFIG_PACKAGE_libgmp=y
+CONFIG_PACKAGE_libgnutls=y
 CONFIG_PACKAGE_liblzma=m
 CONFIG_PACKAGE_liblzo=m
 CONFIG_PACKAGE_libmbedtls=m
 CONFIG_PACKAGE_libminiupnpc=m
 CONFIG_PACKAGE_libnatpmp=m
-CONFIG_PACKAGE_libncurses=m
-CONFIG_PACKAGE_libnettle=m
-CONFIG_PACKAGE_libpam=m
+CONFIG_PACKAGE_libncurses=y
+CONFIG_PACKAGE_libnettle=y
+CONFIG_PACKAGE_libpam=y
 CONFIG_PACKAGE_libpcre2-16=m
 CONFIG_PACKAGE_libpng=m
-CONFIG_PACKAGE_libpopt=m
-CONFIG_PACKAGE_libreadline=m
+CONFIG_PACKAGE_libpopt=y
+CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libsmartcols=m
 CONFIG_PACKAGE_libsodium=m
 CONFIG_PACKAGE_libsqlite3=m
 CONFIG_PACKAGE_libstdcpp=m
-CONFIG_PACKAGE_libtasn1=m
-CONFIG_PACKAGE_libtirpc=m
+CONFIG_PACKAGE_libtasn1=y
+CONFIG_PACKAGE_libtirpc=y
 CONFIG_PACKAGE_libunbound=m
 CONFIG_PACKAGE_libupnp=m
 CONFIG_PACKAGE_libwxbase=m
@@ -262,13 +275,13 @@ CONFIG_PACKAGE_lighttpd=m
 CONFIG_PACKAGE_luci-app-adbyby-plus=m
 CONFIG_PACKAGE_luci-app-amule=m
 CONFIG_PACKAGE_luci-app-aria2=m
-# CONFIG_PACKAGE_luci-app-ddns is not set
+CONFIG_PACKAGE_luci-app-ddns=m
+CONFIG_PACKAGE_luci-app-dnscrypt-proxy=m
 CONFIG_PACKAGE_luci-app-openvpn=m
 CONFIG_PACKAGE_luci-app-openvpn-server=m
 CONFIG_PACKAGE_luci-app-p910nd=m
 CONFIG_PACKAGE_luci-app-qbittorrent=m
 CONFIG_PACKAGE_luci-app-qos=m
-CONFIG_PACKAGE_luci-app-samba=y
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-transmission=m
 CONFIG_PACKAGE_luci-app-uhttpd=m
@@ -279,6 +292,7 @@ CONFIG_PACKAGE_luci-app-zerotier=m
 CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-amule-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-openvpn-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-p910nd-zh-cn=m
@@ -291,7 +305,9 @@ CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-v2ray-server-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=m
+CONFIG_PACKAGE_luci-lib-httpprotoutils=m
 CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_luci-ssl-openssl=m
 CONFIG_PACKAGE_mt7601u-firmware=m
 CONFIG_PACKAGE_nginx=m
 CONFIG_PACKAGE_nginx-all-module=m
@@ -350,7 +366,6 @@ CONFIG_PACKAGE_qt5-network=m
 CONFIG_PACKAGE_qt5-xml=m
 CONFIG_PACKAGE_rblibtorrent=m
 CONFIG_PACKAGE_resolveip=m
-CONFIG_PACKAGE_samba36-server=y
 CONFIG_PACKAGE_samba4-libs=y
 CONFIG_PACKAGE_samba4-server=y
 CONFIG_PACKAGE_screen=m
@@ -367,7 +382,7 @@ CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=m
 CONFIG_PACKAGE_sshtunnel=m
 CONFIG_PACKAGE_sudo=m
 CONFIG_PACKAGE_tc=m
-CONFIG_PACKAGE_terminfo=m
+CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_transmission-daemon-openssl=m
 CONFIG_PACKAGE_transmission-web-control=m
 CONFIG_PACKAGE_uclibcxx=m
